// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Summary service endpoint returns an array of multiple component dependencies renders the page 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Visualizations
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/dependencies"
      target="_self"
    >
      
    Visualizations
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/response-times"
      target="_self"
    >
      
    Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/downstream-response-times"
      target="_self"
    >
      
    Downstream Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/call-graphs"
      target="_self"
    >
      
    Call Graphs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      Errors
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      Tests
    </a>
  </div>
   
  <div>
    <transition-stub
      css="true"
      enteractiveclass=""
      enterclass=""
      entertoclass="show"
      leaveactiveclass=""
      leaveclass="show"
      leavetoclass=""
      name=""
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="alert alert-dismissible alert-info"
        role="alert"
      >
        <button
          aria-label="Close"
          class="close"
          type="button"
        >
          ×
        </button>
        
    Click a dot in the dependencies diagram to see more information about that component
  
      </div>
    </transition-stub>
     
    <div
      class="mt-3 mb-4"
      components="[object Object]"
    >
       
      <button
        aria-controls="filters"
        aria-expanded="false"
        class="btn btn-primary collapsed"
        id="toggleFilters"
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="blank"
          class="bi-blank b-icon bi"
          fill="currentColor"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g />
        </svg>
         Filters
  
      </button>
       
      <transition-stub
        class="mt-3"
        css="true"
        enteractiveclass="collapsing"
        enterclass=""
        entertoclass="collapse show"
        leaveactiveclass="collapsing"
        leaveclass="collapse show"
        leavetoclass="collapse"
      >
        <div
          class="collapse"
          id="filters"
          style="display: none;"
        >
          <div
            class="card-columns"
          >
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__121"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__121__BV_label_"
                    tabindex="-1"
                  >
                    Dependency Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__122"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__122_BV_option_0"
                          name="dependencyTypeId"
                          type="checkbox"
                          value=""
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__122_BV_option_0"
                        >
                          <span>
                            null
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="form-row form-group"
                  id="__BVID__124"
                  role="group"
                >
                  <label
                    class="col-6 col-form-label col-form-label-sm"
                    for="graph-scope-related-radius"
                    id="__BVID__124__BV_label_"
                  >
                    Radius:
                  </label>
                  <div
                    class="col"
                  >
                    <select
                      class="custom-select custom-select-sm"
                      id="graph-scope-related-radius"
                    >
                      <option
                        value="0"
                      >
                        0
                      </option>
                      <option
                        value="1"
                      >
                        1
                      </option>
                      <option
                        value="2"
                      >
                        2
                      </option>
                      <option
                        value="3"
                      >
                        3
                      </option>
                      <option
                        value="4"
                      >
                        4
                      </option>
                      <option
                        value="5"
                      >
                        5
                      </option>
                      <option
                        value="6"
                      >
                        6
                      </option>
                      <option
                        value="7"
                      >
                        7
                      </option>
                      <option
                        value="8"
                      >
                        8
                      </option>
                      <option
                        value="9"
                      >
                        9
                      </option>
                      <option
                        value="10"
                      >
                        10
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="form-row form-group"
                  id="__BVID__126"
                  role="group"
                >
                  <label
                    class="col-6 col-form-label col-form-label-sm"
                    for="graph-zoom"
                    id="__BVID__126__BV_label_"
                  >
                    Zoom:
                  </label>
                  <div
                    class="col"
                  >
                    <select
                      class="custom-select custom-select-sm"
                      id="graph-zoom"
                    >
                      <option
                        value="25"
                      >
                        25%
                      </option>
                      <option
                        value="50"
                      >
                        50%
                      </option>
                      <option
                        value="75"
                      >
                        75%
                      </option>
                      <option
                        value="100"
                      >
                        100%
                      </option>
                      <option
                        value="125"
                      >
                        125%
                      </option>
                      <option
                        value="150"
                      >
                        150%
                      </option>
                      <option
                        value="200"
                      >
                        200%
                      </option>
                      <option
                        value="400"
                      >
                        400%
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="detailed-dependencies"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="custom-control-label"
                    for="detailed-dependencies"
                  >
                    
        Detailed dependencies
      
                  </label>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <!---->
             
            <!---->
             
            <!---->
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__129"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__129__BV_label_"
                    tabindex="-1"
                  >
                    Teams
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__130"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__130_BV_option_0"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__130_BV_option_0"
                        >
                          <span>
                            test-team-id-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__130_BV_option_1"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__130_BV_option_1"
                        >
                          <span>
                            test-team-id-1-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__133"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__133__BV_label_"
                    tabindex="-1"
                  >
                    Tags
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__134"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__134_BV_option_0"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__134_BV_option_0"
                        >
                          <span>
                            test-tag-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__134_BV_option_1"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__134_BV_option_1"
                        >
                          <span>
                            test-tag-1-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__137"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__137__BV_label_"
                    tabindex="-1"
                  >
                    Component Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__138"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__138_BV_option_0"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__138_BV_option_0"
                        >
                          <span>
                            test-component-type-id-1
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__140"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__140__BV_label_"
                    tabindex="-1"
                  >
                    Platforms
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__141"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__141_BV_option_0"
                          name="platformId"
                          type="checkbox"
                          value="undefined"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__141_BV_option_0"
                        >
                          <span>
                            undefined
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="form-group"
                  id="__BVID__143"
                  role="group"
                >
                  <label
                    class="d-block"
                    for="component-filter"
                    id="__BVID__143__BV_label_"
                  >
                    Component
                  </label>
                  <div>
                    <select
                      class="custom-select custom-select-sm"
                      id="component-filter"
                    >
                      <option
                        value=""
                      >
                        Please select a component
                      </option>
                      <option
                        value="test-component-id-1"
                      >
                        test-component-id-1
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
     
    <div
      class="graph"
    >
      <svg
        height="1200"
        id="component-dependency-graph"
        overflow="auto"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          class="component-dependency-graph-background"
          fill-opacity="0"
        />
         
        <defs>
          <marker
            class="dependency-marker all-dependency-marker"
            id="component-dependency-graph-dependency-marker-all"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker manual-dependency-marker"
            id="component-dependency-graph-dependency-marker-manual"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker scope-related-dependency-marker"
            id="component-dependency-graph-dependency-marker-scope-related"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker scoped-dependency-marker"
            id="component-dependency-graph-dependency-marker-scoped"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker related-dependency-marker"
            id="component-dependency-graph-dependency-marker-related"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker direct-dependency-marker"
            id="component-dependency-graph-dependency-marker-direct"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker selected-dependency-marker"
            id="component-dependency-graph-dependency-marker-selected"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
        </defs>
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g>
          <path
            class="dependency direct-dependency"
            d="M50,50L50,150"
            id="component-dependency-graph-dependency-0"
            marker-end="url(#component-dependencies-direct-dependency-marker)"
          />
        </g>
        <g />
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g>
          <circle
            class="node direct-node"
            cx="50"
            cy="150"
            id="component-dependency-graph-node-1"
            r="10"
            title="test-component-id-2"
          />
        </g>
        <g>
          <circle
            class="node selected-node"
            cx="50"
            cy="50"
            id="component-dependency-graph-node-0"
            r="10"
            title="test-component-id-1"
          />
        </g>
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g>
          <text
            class="node-label direct-node-label"
            font-size="14"
            stroke-width="1.75"
            x="67"
            y="170"
          >
            <tspan
              x="67"
              y="170"
            >
              
        test-component-id-2
      
            </tspan>
          </text>
        </g>
        <g>
          <text
            class="node-label selected-node-label"
            font-size="14"
            stroke-width="1.75"
            x="67"
            y="70"
          >
            <tspan
              x="67"
              y="70"
            >
              
        test-component-id-1
      
            </tspan>
          </text>
        </g>
      </svg>
    </div>
     
    <div
      class="b-sidebar-outer"
      tabindex="-1"
    >
      <!---->
      <transition-stub
        css="true"
        enteractiveclass="slide"
        enterclass=""
        entertoclass="show"
        leaveactiveclass="slide"
        leaveclass="show"
        leavetoclass=""
      >
        <div
          aria-hidden="true"
          aria-modal="true"
          class="b-sidebar b-sidebar-right bg-dark text-light"
          id="component"
          role="dialog"
          style="width: 600px; display: none;"
          tabindex="-1"
        >
          <header
            class="b-sidebar-header"
          >
            <button
              aria-label="Close"
              class="close text-light"
              type="button"
            >
              <svg
                aria-label="x"
                class="bi-x b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
                  />
                </g>
              </svg>
            </button>
            <span />
          </header>
          <div
            class="b-sidebar-body"
          >
            <div
              class="m-3"
            >
              <!---->
            </div>
          </div>
          <!---->
        </div>
      </transition-stub>
      <!---->
      <transition-stub
        css="true"
        enteractiveclass="fade"
        enterclass=""
        entertoclass="show"
        leaveactiveclass="fade"
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          class="b-sidebar-backdrop bg-dark"
          style="display: none;"
        />
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Index when Get Summary service endpoint returns an array of multiple component dependencies when the detailed checkbox is checked shows detailed dependencies in graph 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Visualizations
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/dependencies"
      target="_self"
    >
      
    Visualizations
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/response-times"
      target="_self"
    >
      
    Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/downstream-response-times"
      target="_self"
    >
      
    Downstream Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/call-graphs"
      target="_self"
    >
      
    Call Graphs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      Errors
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      Tests
    </a>
  </div>
   
  <div>
    <transition-stub
      css="true"
      enteractiveclass=""
      enterclass=""
      entertoclass="show"
      leaveactiveclass=""
      leaveclass="show"
      leavetoclass=""
      name=""
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="alert alert-dismissible alert-info"
        role="alert"
      >
        <button
          aria-label="Close"
          class="close"
          type="button"
        >
          ×
        </button>
        
    Click a dot in the dependencies diagram to see more information about that component
  
      </div>
    </transition-stub>
     
    <div
      class="mt-3 mb-4"
      components="[object Object]"
    >
       
      <button
        aria-controls="filters"
        aria-expanded="false"
        class="btn btn-primary collapsed"
        id="toggleFilters"
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="blank"
          class="bi-blank b-icon bi"
          fill="currentColor"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g />
        </svg>
         Filters
  
      </button>
       
      <transition-stub
        class="mt-3"
        css="true"
        enteractiveclass="collapsing"
        enterclass=""
        entertoclass="collapse show"
        leaveactiveclass="collapsing"
        leaveclass="collapse show"
        leavetoclass="collapse"
      >
        <div
          class="collapse"
          id="filters"
          style="display: none;"
        >
          <div
            class="card-columns"
          >
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__171"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__171__BV_label_"
                    tabindex="-1"
                  >
                    Dependency Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__172"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__172_BV_option_0"
                          name="dependencyTypeId"
                          type="checkbox"
                          value=""
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__172_BV_option_0"
                        >
                          <span>
                            null
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="form-row form-group"
                  id="__BVID__174"
                  role="group"
                >
                  <label
                    class="col-6 col-form-label col-form-label-sm"
                    for="graph-scope-related-radius"
                    id="__BVID__174__BV_label_"
                  >
                    Radius:
                  </label>
                  <div
                    class="col"
                  >
                    <select
                      class="custom-select custom-select-sm"
                      id="graph-scope-related-radius"
                    >
                      <option
                        value="0"
                      >
                        0
                      </option>
                      <option
                        value="1"
                      >
                        1
                      </option>
                      <option
                        value="2"
                      >
                        2
                      </option>
                      <option
                        value="3"
                      >
                        3
                      </option>
                      <option
                        value="4"
                      >
                        4
                      </option>
                      <option
                        value="5"
                      >
                        5
                      </option>
                      <option
                        value="6"
                      >
                        6
                      </option>
                      <option
                        value="7"
                      >
                        7
                      </option>
                      <option
                        value="8"
                      >
                        8
                      </option>
                      <option
                        value="9"
                      >
                        9
                      </option>
                      <option
                        value="10"
                      >
                        10
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="form-row form-group"
                  id="__BVID__176"
                  role="group"
                >
                  <label
                    class="col-6 col-form-label col-form-label-sm"
                    for="graph-zoom"
                    id="__BVID__176__BV_label_"
                  >
                    Zoom:
                  </label>
                  <div
                    class="col"
                  >
                    <select
                      class="custom-select custom-select-sm"
                      id="graph-zoom"
                    >
                      <option
                        value="25"
                      >
                        25%
                      </option>
                      <option
                        value="50"
                      >
                        50%
                      </option>
                      <option
                        value="75"
                      >
                        75%
                      </option>
                      <option
                        value="100"
                      >
                        100%
                      </option>
                      <option
                        value="125"
                      >
                        125%
                      </option>
                      <option
                        value="150"
                      >
                        150%
                      </option>
                      <option
                        value="200"
                      >
                        200%
                      </option>
                      <option
                        value="400"
                      >
                        400%
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="detailed-dependencies"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="custom-control-label"
                    for="detailed-dependencies"
                  >
                    
        Detailed dependencies
      
                  </label>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <!---->
             
            <!---->
             
            <!---->
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__179"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__179__BV_label_"
                    tabindex="-1"
                  >
                    Teams
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__180"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__180_BV_option_0"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__180_BV_option_0"
                        >
                          <span>
                            test-team-id-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__180_BV_option_1"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__180_BV_option_1"
                        >
                          <span>
                            test-team-id-1-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__183"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__183__BV_label_"
                    tabindex="-1"
                  >
                    Tags
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__184"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__184_BV_option_0"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__184_BV_option_0"
                        >
                          <span>
                            test-tag-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__184_BV_option_1"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__184_BV_option_1"
                        >
                          <span>
                            test-tag-1-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__187"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__187__BV_label_"
                    tabindex="-1"
                  >
                    Component Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__188"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__188_BV_option_0"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__188_BV_option_0"
                        >
                          <span>
                            test-component-type-id-1
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__190"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__190__BV_label_"
                    tabindex="-1"
                  >
                    Platforms
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__191"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__191_BV_option_0"
                          name="platformId"
                          type="checkbox"
                          value="undefined"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__191_BV_option_0"
                        >
                          <span>
                            undefined
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="form-group"
                  id="__BVID__193"
                  role="group"
                >
                  <label
                    class="d-block"
                    for="component-filter"
                    id="__BVID__193__BV_label_"
                  >
                    Component
                  </label>
                  <div>
                    <select
                      class="custom-select custom-select-sm"
                      id="component-filter"
                    >
                      <option
                        value=""
                      >
                        Please select a component
                      </option>
                      <option
                        value="test-component-id-1"
                      >
                        test-component-id-1
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
     
    <div
      class="graph"
    >
      <svg
        height="1200"
        id="component-dependency-graph"
        overflow="auto"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          class="component-dependency-graph-background"
          fill-opacity="0"
        />
         
        <defs>
          <marker
            class="dependency-marker all-dependency-marker"
            id="component-dependency-graph-dependency-marker-all"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker manual-dependency-marker"
            id="component-dependency-graph-dependency-marker-manual"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker scope-related-dependency-marker"
            id="component-dependency-graph-dependency-marker-scope-related"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker scoped-dependency-marker"
            id="component-dependency-graph-dependency-marker-scoped"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker related-dependency-marker"
            id="component-dependency-graph-dependency-marker-related"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker direct-dependency-marker"
            id="component-dependency-graph-dependency-marker-direct"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker selected-dependency-marker"
            id="component-dependency-graph-dependency-marker-selected"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
        </defs>
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g>
          <path
            class="dependency direct-dependency"
            d="M50,50L50,150"
            id="component-dependency-graph-dependency-0"
            marker-end="url(#component-dependencies-direct-dependency-marker)"
          />
        </g>
        <g />
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g>
          <circle
            class="node direct-node"
            cx="50"
            cy="150"
            id="component-dependency-graph-node-1"
            r="10"
            title="test-component-id-2"
          />
        </g>
        <g>
          <circle
            class="node selected-node"
            cx="50"
            cy="50"
            id="component-dependency-graph-node-0"
            r="10"
            title="test-component-id-1"
          />
        </g>
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g>
          <text
            class="node-label direct-node-label"
            font-size="14"
            stroke-width="1.75"
            x="67"
            y="170"
          >
            <tspan
              x="67"
              y="170"
            >
              
        test-component-id-2
      
            </tspan>
          </text>
        </g>
        <g>
          <text
            class="node-label selected-node-label"
            font-size="14"
            stroke-width="1.75"
            x="67"
            y="70"
          >
            <tspan
              x="67"
              y="70"
            >
              
        test-component-id-1
      
            </tspan>
          </text>
        </g>
      </svg>
    </div>
     
    <div
      class="b-sidebar-outer"
      tabindex="-1"
    >
      <!---->
      <transition-stub
        css="true"
        enteractiveclass="slide"
        enterclass=""
        entertoclass="show"
        leaveactiveclass="slide"
        leaveclass="show"
        leavetoclass=""
      >
        <div
          aria-hidden="true"
          aria-modal="true"
          class="b-sidebar b-sidebar-right bg-dark text-light"
          id="component"
          role="dialog"
          style="width: 600px; display: none;"
          tabindex="-1"
        >
          <header
            class="b-sidebar-header"
          >
            <button
              aria-label="Close"
              class="close text-light"
              type="button"
            >
              <svg
                aria-label="x"
                class="bi-x b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
                  />
                </g>
              </svg>
            </button>
            <span />
          </header>
          <div
            class="b-sidebar-body"
          >
            <div
              class="m-3"
            >
              <!---->
            </div>
          </div>
          <!---->
        </div>
      </transition-stub>
      <!---->
      <transition-stub
        css="true"
        enteractiveclass="fade"
        enterclass=""
        entertoclass="show"
        leaveactiveclass="fade"
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          class="b-sidebar-backdrop bg-dark"
          style="display: none;"
        />
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Index when Get Summary service endpoint returns no dependencies renders the page 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Visualizations
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/dependencies"
      target="_self"
    >
      
    Visualizations
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/response-times"
      target="_self"
    >
      
    Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/downstream-response-times"
      target="_self"
    >
      
    Downstream Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/call-graphs"
      target="_self"
    >
      
    Call Graphs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      Errors
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      Tests
    </a>
  </div>
   
  <div>
    <transition-stub
      css="true"
      enteractiveclass=""
      enterclass=""
      entertoclass="show"
      leaveactiveclass=""
      leaveclass="show"
      leavetoclass=""
      name=""
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="alert alert-dismissible alert-info"
        role="alert"
      >
        <button
          aria-label="Close"
          class="close"
          type="button"
        >
          ×
        </button>
        
    Click a dot in the dependencies diagram to see more information about that component
  
      </div>
    </transition-stub>
     
    <div
      class="mt-3 mb-4"
      components="[object Object]"
    >
       
      <button
        aria-controls="filters"
        aria-expanded="false"
        class="btn btn-primary collapsed"
        id="toggleFilters"
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="blank"
          class="bi-blank b-icon bi"
          fill="currentColor"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g />
        </svg>
         Filters
  
      </button>
       
      <transition-stub
        class="mt-3"
        css="true"
        enteractiveclass="collapsing"
        enterclass=""
        entertoclass="collapse show"
        leaveactiveclass="collapsing"
        leaveclass="collapse show"
        leavetoclass="collapse"
      >
        <div
          class="collapse"
          id="filters"
          style="display: none;"
        >
          <div
            class="card-columns"
          >
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__72"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__72__BV_label_"
                    tabindex="-1"
                  >
                    Dependency Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__73"
                      role="group"
                      tabindex="-1"
                    />
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="form-row form-group"
                  id="__BVID__74"
                  role="group"
                >
                  <label
                    class="col-6 col-form-label col-form-label-sm"
                    for="graph-scope-related-radius"
                    id="__BVID__74__BV_label_"
                  >
                    Radius:
                  </label>
                  <div
                    class="col"
                  >
                    <select
                      class="custom-select custom-select-sm"
                      id="graph-scope-related-radius"
                    >
                      <option
                        value="0"
                      >
                        0
                      </option>
                      <option
                        value="1"
                      >
                        1
                      </option>
                      <option
                        value="2"
                      >
                        2
                      </option>
                      <option
                        value="3"
                      >
                        3
                      </option>
                      <option
                        value="4"
                      >
                        4
                      </option>
                      <option
                        value="5"
                      >
                        5
                      </option>
                      <option
                        value="6"
                      >
                        6
                      </option>
                      <option
                        value="7"
                      >
                        7
                      </option>
                      <option
                        value="8"
                      >
                        8
                      </option>
                      <option
                        value="9"
                      >
                        9
                      </option>
                      <option
                        value="10"
                      >
                        10
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="form-row form-group"
                  id="__BVID__76"
                  role="group"
                >
                  <label
                    class="col-6 col-form-label col-form-label-sm"
                    for="graph-zoom"
                    id="__BVID__76__BV_label_"
                  >
                    Zoom:
                  </label>
                  <div
                    class="col"
                  >
                    <select
                      class="custom-select custom-select-sm"
                      id="graph-zoom"
                    >
                      <option
                        value="25"
                      >
                        25%
                      </option>
                      <option
                        value="50"
                      >
                        50%
                      </option>
                      <option
                        value="75"
                      >
                        75%
                      </option>
                      <option
                        value="100"
                      >
                        100%
                      </option>
                      <option
                        value="125"
                      >
                        125%
                      </option>
                      <option
                        value="150"
                      >
                        150%
                      </option>
                      <option
                        value="200"
                      >
                        200%
                      </option>
                      <option
                        value="400"
                      >
                        400%
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="detailed-dependencies"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="custom-control-label"
                    for="detailed-dependencies"
                  >
                    
        Detailed dependencies
      
                  </label>
                </div>
              </div>
              <!---->
              <!---->
            </div>
             
            <!---->
             
            <!---->
             
            <!---->
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__79"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__79__BV_label_"
                    tabindex="-1"
                  >
                    Teams
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__80"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__80_BV_option_0"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__80_BV_option_0"
                        >
                          <span>
                            test-team-id-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__80_BV_option_1"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__80_BV_option_1"
                        >
                          <span>
                            test-team-id-1-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__83"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__83__BV_label_"
                    tabindex="-1"
                  >
                    Tags
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__84"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__84_BV_option_0"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__84_BV_option_0"
                        >
                          <span>
                            test-tag-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__84_BV_option_1"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__84_BV_option_1"
                        >
                          <span>
                            test-tag-1-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__87"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__87__BV_label_"
                    tabindex="-1"
                  >
                    Component Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__88"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__88_BV_option_0"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__88_BV_option_0"
                        >
                          <span>
                            test-component-type-id-1
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <fieldset
                  class="form-group"
                  id="__BVID__90"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__90__BV_label_"
                    tabindex="-1"
                  >
                    Platforms
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__91"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__91_BV_option_0"
                          name="platformId"
                          type="checkbox"
                          value="undefined"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__91_BV_option_0"
                        >
                          <span>
                            undefined
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </div>
              <!---->
              <!---->
            </div>
             
            <div
              class="card bg-secondary"
            >
              <!---->
              <!---->
              <div
                class="card-body"
              >
                <!---->
                <!---->
                <div
                  class="form-group"
                  id="__BVID__93"
                  role="group"
                >
                  <label
                    class="d-block"
                    for="component-filter"
                    id="__BVID__93__BV_label_"
                  >
                    Component
                  </label>
                  <div>
                    <select
                      class="custom-select custom-select-sm"
                      id="component-filter"
                    >
                      <option
                        value=""
                      >
                        Please select a component
                      </option>
                      <option
                        value="test-component-id-1"
                      >
                        test-component-id-1
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
     
    <div
      class="graph"
    >
      <svg
        height="1200"
        id="component-dependency-graph"
        overflow="auto"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          class="component-dependency-graph-background"
          fill-opacity="0"
        />
         
        <defs>
          <marker
            class="dependency-marker all-dependency-marker"
            id="component-dependency-graph-dependency-marker-all"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker manual-dependency-marker"
            id="component-dependency-graph-dependency-marker-manual"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker scope-related-dependency-marker"
            id="component-dependency-graph-dependency-marker-scope-related"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker scoped-dependency-marker"
            id="component-dependency-graph-dependency-marker-scoped"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker related-dependency-marker"
            id="component-dependency-graph-dependency-marker-related"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker direct-dependency-marker"
            id="component-dependency-graph-dependency-marker-direct"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
          <marker
            class="dependency-marker selected-dependency-marker"
            id="component-dependency-graph-dependency-marker-selected"
            markerHeight="11.5"
            markerUnits="userSpaceOnUse"
            markerWidth="7.1"
            orient="auto-start-reverse"
            refX="20"
            refY="5.75"
            viewBox="0 0 7.1 11.5"
          >
            <path
              d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
            />
          </marker>
        </defs>
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
         
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
        <g />
      </svg>
    </div>
     
    <div
      class="b-sidebar-outer"
      tabindex="-1"
    >
      <!---->
      <transition-stub
        css="true"
        enteractiveclass="slide"
        enterclass=""
        entertoclass="show"
        leaveactiveclass="slide"
        leaveclass="show"
        leavetoclass=""
      >
        <div
          aria-hidden="true"
          aria-modal="true"
          class="b-sidebar b-sidebar-right bg-dark text-light"
          id="component"
          role="dialog"
          style="width: 600px; display: none;"
          tabindex="-1"
        >
          <header
            class="b-sidebar-header"
          >
            <button
              aria-label="Close"
              class="close text-light"
              type="button"
            >
              <svg
                aria-label="x"
                class="bi-x b-icon bi"
                fill="currentColor"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
                  />
                </g>
              </svg>
            </button>
            <span />
          </header>
          <div
            class="b-sidebar-body"
          >
            <div
              class="m-3"
            >
              <!---->
            </div>
          </div>
          <!---->
        </div>
      </transition-stub>
      <!---->
      <transition-stub
        css="true"
        enteractiveclass="fade"
        enterclass=""
        entertoclass="show"
        leaveactiveclass="fade"
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          class="b-sidebar-backdrop bg-dark"
          style="display: none;"
        />
      </transition-stub>
    </div>
  </div>
</div>
`;
